<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Ejercicio2Activity">

    <TextView
        android:id="@+id/tvExpresion"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_margin="20dp"
        android:layout_weight="4"
        android:gravity="top|end"
        android:maxLength="9"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnNro7"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/siete"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro8"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/ocho"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro9"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/nueve"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/sumar"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnNro4"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/cuatro"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro5"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/cinco"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro6"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/seis"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/restar"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnNro1"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/uno"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro2"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/dos"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro3"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/tres"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/multiplicar"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/borrar"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNro0"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/cero"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/calcular"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:insetLeft="8dp"
                android:text="@string/dividir"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>