<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTituloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_numero_actividad"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEj1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="30dp"
        android:onClick="OnTouchActividad1"
        android:text="@string/button_ejercicio_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloApp"/>

    <Button
        android:id="@+id/buttonEj2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_ejercicio_2"
        android:onClick="OnTouchActividad2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEj1" />

    <TextView
        android:id="@+id/tvIntegrantesEquipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_integrantes_equipo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvIntegrantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvIntegrantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/tv_integrantes_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>